# prism

./: .env  .gitignore  README.md  create_collection.py  main.py  memory.py  namma_models.py  pyproject.toml  requirements.txt  server.py  utils.py
config/: agents.yaml  tasks.yaml
db/: mongo_client.py
output/: final_decision.md  results.json
src/shop_agent/: crew.py  db.py  episode_data_updating.py  main.py  memory.py  schema_inspector.py  test_search_memory.py
src/shop_agent/config/: agents.yaml  tasks.yaml
src/shop_agent/models/: model.py
src/shop_agent/tools/: custom_tool.py  db_tool.py  vector_tools.py
tests/: test_memory.py
tools/: custom_tool.py  vector_tools.py
