[project]
name = "shop_agent"
version = "0.1.0"
description = "shop_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0",
    "composio-crewai (>=0.7.14,<0.8.0)",
    "scrapegraph-py>=1.12.0",
    "selenium>=4.32.0",
    "webdriver-manager>=4.0.2",
    "crawl4ai>=0.6.2",
    "serpapi>=0.1.5",
    "google-search-results>=2.4.2",
]

[project.scripts]
shop_agent = "shop_agent.main:run"
run_crew = "shop_agent.main:run"
train = "shop_agent.main:train"
replay = "shop_agent.main:replay"
test = "shop_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
